...
                        .foregroundStyle(.blue)
                        .font(.system(size: 14))
                        .frame(width: 80, height: 27)
                        .overlay(RoundedRectangle(cornerRadius: 6)
                            .stroke(Color.buttonBorderColor, lineWidth: 1))
                }
                .accessibilityIdentifier("TableMoreButtonIdentifier")
                .popover(isPresented: $showingPopover) {
                    if #available(iOS 16.4, *) {
                        VStack(spacing: 8) {
                            if viewModel.tableDataModel.selectedRows.count == 1 {
                                Button(action: {
                                    showingPopover = false
...
                                        .foregroundStyle(.blue)
                                        .font(.system(size: 14))
                                        .frame(height: 27)
                                }
                                .padding(.horizontal, 16)
                                .padding(.top, viewModel.tableDataModel.selectedRows.count > 1 ? 16 : 0)
                                .accessibilityIdentifier("TableEditRowsIdentifier")
                            }
                            
                            Button(action: {
                                showingPopover = false
                                viewModel.deleteSelectedRow()
                            }) {
...
                                    Image(systemName: "xmark")
                                        .resizable()
                                        .frame(width: 10, height: 10)
                                        .darkLightThemeColor()
                                }
                            })
                            .accessibilityIdentifier("DismissEditSingleRowSheetButtonIdentifier")
                        }
                        .padding([.horizontal, .top], 16)
                        .padding(.bottom, 8)
                    }
                HStack(alignment: .top) {
                    if let title = viewModel.tableDataModel.title {
...
                                columnTitle(col, isCellFilled: isEffectivelyFilled)
                                TableTextRowFormView(cellModel: Binding.constant(cellModel),
                                                     formulaValue: viewModel.formulaValue(columnID: columnID, rowID: row),
                                                     isUsedForBulkEdit: isUsedForBulkEdit)
                                    .frame(minHeight: 40)
                                    .cellBorder(isFocused: isFocused)
                                    .accessibilityIdentifier("EditRowsTextFieldIdentifier")

                            case .dropdown:
                                columnTitle(col, isCellFilled: isEffectivelyFilled)
                                TableDropDownOptionListView(cellModel: Binding.constant(cellModel), isUsedForBulkEdit: isUsedForBulkEdit)
                                    .cellBorder(isFocused: isFocused)
                                    .accessibilityIdentifier("EditRowsDropdownFieldIdentifier")
...
